Make ModifierAccessor an utility class