@@ -9,7 +9,6 @@ package org.jboss.forge.roaster.model.ast;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.core.dom.ASTNode;
 import org.eclipse.jdt.core.dom.BodyDeclaration;
@@ -17,29 +16,34 @@ import org.eclipse.jdt.core.dom.Modifier;
 import org.eclipse.jdt.core.dom.Modifier.ModifierKeyword;
 import org.eclipse.jdt.core.dom.SingleVariableDeclaration;
 
-public class ModifierAccessor
+public final class ModifierAccessor
 {
-   public boolean hasModifier(ASTNode body, final ModifierKeyword keyword)
+
+   private ModifierAccessor()
    {
-      return getModifiers(body).stream().filter(modifier -> modifier.getKeyword() == keyword).count() != 0;
+      throw new InternalError("Utility class");
    }
 
-   private List<Modifier> getModifiers(ASTNode body)
+   public static boolean hasModifier(ASTNode body, final ModifierKeyword keyword)
+   {
+      return getModifiers(body).stream().anyMatch(modifier -> modifier.getKeyword() == keyword);
+   }
+
+   private static List<Modifier> getModifiers(ASTNode body)
    {
       List<Modifier> result = new ArrayList<>();
       List<?> modifiers = getInternalModifiers(body);
       for (Object m : modifiers)
       {
-         if (m instanceof Modifier)
+         if (m instanceof Modifier mod)
          {
-            Modifier mod = (Modifier) m;
             result.add(mod);
          }
       }
       return result;
    }
 
-   public List<Modifier> clearVisibility(ASTNode body)
+   public static List<Modifier> clearVisibility(ASTNode body)
    {
       List<Modifier> modifiers = getModifiers(body);
 
@@ -56,7 +60,7 @@ public class ModifierAccessor
       return modifiers;
    }
 
-   public void addModifier(ASTNode body, ModifierKeyword keyword)
+   public static void addModifier(ASTNode body, ModifierKeyword keyword)
    {
       if (!hasModifier(body, keyword))
       {
@@ -64,11 +68,11 @@ public class ModifierAccessor
       }
    }
 
-   public void removeModifier(ASTNode body, ModifierKeyword keyword)
+   public static void removeModifier(ASTNode body, ModifierKeyword keyword)
    {
       List<Modifier> toBeRemoved = getModifiers(body).stream()
                .filter(modifier -> modifier.getKeyword().equals(keyword))
-               .collect(Collectors.toList());
+               .toList();
       getInternalModifiers(body).removeAll(toBeRemoved);
    }
 
